--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 
 .wrapper {
     text-align: center;
-    width: 350px;
+    width: 360px;
     margin: auto;
 }
 
@@ -29,13 +29,29 @@ div {
     padding: 8px 10px;
     border-radius: 5px;
     margin: 2px;
-    cursor: default;
+    cursor: pointer;
+}
+
+.new-game {
+    display: none;
+    position: absolute;
+    left : 50%;
+    top: 42%;
+    border: 1px solid gray;
+    padding: 10px 20px;
+    transform: translate(-50%, -50%);
+}
+
+@media(hover: hover) {
+    .key:hover {
+        background-color: #b3b6b9;
+    }
 }
 
 .c {
     float: left;
     border: 1px solid silver;
-    font-size: calc(2.4vw + 2.4vh);
+    font-size: 40px;
     text-align: center;
     width: 18%;
     height: 0;
@@ -66,7 +82,7 @@ div {
     color: white;
     transform: translate(-50%, -50%);
     padding: 10px 30px;
-    background-color: #444;
+    background-color: rgba(0, 0, 0, .8);
     border-radius: 5px;
 }
 
