--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,16 @@ div {
 .key {
     display: inline-block;
     background-color: #d3d6da;
-    padding: 8px 10px;
+    padding: 8px 5px;
+    text-align: center;
     border-radius: 5px;
     margin: 2px;
     cursor: pointer;
+}
+
+.key-letter {
+    font-weight: 500;
+    width: 31px;
 }
 
 .new-game {
