--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 body {
     font:16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 .wrapper {
     text-align: center;
     width: 360px;
+    top: 0;
     margin: auto;
     user-select: none; /* supported by Chrome and Opera */
     -webkit-user-select: none; /* Safari */
@@ -12,6 +15,25 @@ body {
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     touch-action: pan-y;
+}
+
+.top-bar {
+    overflow: hidden;
+}
+
+.title {
+    font-size: 22px;
+    font-weight: bold;
+    color: #6aaa64;
+    padding: 1px;
+}
+
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
 }
 
 .console-view {
@@ -39,19 +61,15 @@ div {
     cursor: pointer;
 }
 
+.menu-key {
+    padding: 5px 8px;
+    margin: 2px;
+    font-size: 14px;
+}
+
 .key-letter {
     font-weight: 500;
     width: 31px;
-}
-
-.new-game {
-    display: none;
-    position: absolute;
-    left : 50%;
-    top: 42%;
-    border: 1px solid gray;
-    padding: 10px 20px;
-    transform: translate(-50%, -50%);
 }
 
 @media(hover: hover) {
@@ -63,7 +81,7 @@ div {
 .c {
     float: left;
     border: 1px solid silver;
-    font-size: 40px;
+    font-size: 42px;
     text-align: center;
     width: 18%;
     height: 0;
