--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 }
 
 .wrapper {
+    position: relative;
     text-align: center;
     width: 360px;
     top: 0;
@@ -19,6 +20,46 @@ body {
 
 .top-bar {
     overflow: hidden;
+}
+
+.game-view {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.popup {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+}
+
+.intro {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border-radius: 10px;;
+    background-color: white;
+    overflow: hidden;
+    width: 90%;
+    padding: 15px 15px 25px;
+    text-align: left;
+    font-size: 14px;
+    box-shadow: 0 4px 23px 0 rgb(0 0 0 / 20%);
+}
+
+.popup-title {
+    display: block;
+    overflow: hidden;
+}
+
+.close-btn {
+    float: right;
+    right: 0;
+    cursor: pointer;
 }
 
 .title {
@@ -102,6 +143,12 @@ div {
 .green {
     background-color: #6aaa64;
     color: white;
+}
+
+.text-block {
+    width: 55px;
+    display: inline-block;
+    text-align: center;
 }
 
 .alert {
